# socket-benchmarking-tool

./: .gitignore  AI-REFERENCE.md  MANIFEST.in  PRIVATE_REGISTRY_AUTH.md  QUICK_START_WINDOWS.md  README.md  SETUP.md  aggregate-results.py  cache-packages.bat  cache-packages.sh  dev-setup.sh  generate-comprehensive-report.py  generate-report-simple.py  pyproject.toml  requirements.txt  run-distributed-test.sh  setup-sfw-monitoring.sh  setup.py  socket-firewall-loadtest-distributed.js
examples/: README.md  config-examples.yaml  config-gke.yaml  config-minikube.yaml  config-ssh.yaml
socket_files/: README.md  socket.yml.1cpu-1gb  socket.yml.2cpu-2gb  socket.yml.4cpu-4gb  socket.yml.8cpu-8gb  socket.yml.optimized
socket_load_test/: __init__.py  __main__.py  cli.py  config.py
socket_load_test/core/: __init__.py  metadata_fetcher.py  package_validator.py
socket_load_test/core/infrastructure/: __init__.py  base.py  gke.py  minikube.py  ssh.py
socket_load_test/core/load/: __init__.py  aggregator.py  generator.py  k6_wrapper.py  orchestrator.py
socket_load_test/core/monitoring/: __init__.py  collector.py  exporter.py
socket_load_test/core/reporting/: __init__.py  comprehensive_report.py  html_generator.py  parser.py
socket_load_test/tests/: test_config.py  test_k6_wrapper.py
socket_load_test/utils/: logging.py  ssh_manager.py  validation.py
test-scripts/: debug_maven_auth.py  debug_pypi_headers.py  test-pypi-auth-curl.bat  test-pypi-auth-example.bat  test-pypi-auth.bat  test-pypi-auth.ps1
tests/: __init__.py  conftest.py  test_config.py  test_infrastructure.py  test_logging.py  test_ssh_infrastructure.py  test_ssh_manager.py  test_validation.py
